--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ body {
     align-items: center;
 }
 .swiper-slide.one{
-    background: url("../img/1.png") no-repeat;
+    background: url("../img/1.jpg") no-repeat;
     background-size: 100% 100%;
 }
 .swiper-slide.one .top{
@@ -98,15 +98,15 @@ body {
 .swiper-slide.one .center_cen{
     color: #fff;
     position: absolute;
-    bottom:26%;
-    left:20%;
-    width: 60%;
+    bottom: 18%;
+    left: 10%;
+    width: 83%;
 }
 .swiper-slide.one .center_cen .l5{
-    font-size: 6vw;
+    font-size: 8vw;
 }
 .swiper-slide.two{
-    background: url("../img/1.png") no-repeat;
+    background: url("../img/1.jpg") no-repeat;
     background-size: 100% 100%;
 }
 
@@ -188,7 +188,7 @@ p.ani.fadeInLeft.animated{
 }
 .swiper-slide.three{
     width: 100%;
-    background: url("../img/1.png") no-repeat;
+    background: url("../img/1.jpg") no-repeat;
     background-size:100% 100% ;
 }
 .swiper-slide.three .top{
@@ -224,7 +224,7 @@ p.ani.fadeInLeft.animated{
     left: 0;
 }
 .swiper-slide.four{
-    background: url("../img/1.png") no-repeat;
+    background: url("../img/1.jpg") no-repeat;
     background-size:100% 100% ;
 }
 .swiper-slide.four .top{
@@ -255,7 +255,7 @@ p.ani.fadeInLeft.animated{
     top: 10%;
 }
 .swiper-slide.xie{
-    background: url("../img/1.png") no-repeat;
+    background: url("../img/1.jpg") no-repeat;
     background-size:100% 100% ;
 }
 .swiper-slide.xie .top{
@@ -305,7 +305,7 @@ p.ani.fadeInLeft.animated{
 }
 .swiper-slide.five{
    width: 100%;
-    background: url("../img/1.png") no-repeat;
+    background: url("../img/1.jpg") no-repeat;
     background-size:100% 100% ;
 }
 .swiper-slide.five .center{
@@ -398,7 +398,7 @@ ul.jia{
     font-size: 5vw;
 }
 .swiper-slide.six{
-    background: url("../img/1.png");
+    background: url("../img/1.jpg");
 }
 .swiper-slide.six .top{
     position: absolute;
@@ -442,7 +442,7 @@ ul.jia{
     font-size:5vw;
 }
 .swiper-slide.eight{
-    background: url("../img/1.png") no-repeat;
+    background: url("../img/1.jpg") no-repeat;
     background-size: 100% 100%;
 }
 .swiper-slide.eight .center{
